--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".PantryActivity"/>
         <activity android:name=".ShoppingListActivity"/>
         <activity android:name=".SuitcaseActivity"/>
+        <activity android:name=".PantryAddProduct"/>
     </application>
 
 </manifest>
