--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -32,6 +35,8 @@
         <activity android:name=".pantry.PantryAddItem"/>
         <activity android:name=".shoppingList.ShoppingAddItem"/>
         <activity android:name=".suitcase.SuitcaseAddItem"/>
+
+        <receiver android:name=".NotificationReceiver" />
     </application>
 
 </manifest>
